--- a/lib/components/Input/base/base.scss
+++ b/lib/components/Input/base/base.scss
@@ -59,8 +59,7 @@
         }
 
         .icon_wrapper {
-            width: var(--core-size-1200);
-            height: var(--core-size-1200);
+            display: flex;
         }
     }
 
@@ -68,6 +67,7 @@
         display: flex;
         flex-direction: column;
         position: relative;
+        flex-grow: 1;
 
         &:focus-within {
             &:has(label) {
@@ -92,6 +92,8 @@
         overflow: hidden;
         position: relative;
         border-style: solid;
+        display: flex;
+        gap: var(--semantic-spacing-gap-md);
 
         &:has(input:disabled) {
             cursor: not-allowed;
@@ -103,6 +105,12 @@
         }
         &__variant {
             &--fill {
+                background-color: var(--core-color-opacity-black-75);
+
+                &:hover {
+                    background-color: var(--core-color-opacity-black-100);
+                }
+
                 &:focus-within {
                     background-color: var(--core-color-opacity-black-75);
                     color: var(--semantic-color-typography-prominent);
@@ -154,7 +162,6 @@
         &__status {
             &--neutral {
                 color: var(--core-color-opacity-black-100);
-                background-color: var(--core-color-solid-slate-50);
                 &:focus-within {
                     border-color: var(--semantic-color-typography-prominent);
                     color: var(--semantic-color-typography-prominent);
@@ -289,6 +296,7 @@
             width: 100%;
             cursor: pointer;
             left: var(--core-spacing-50);
+            gap: var(--semantic-spacing-gap-sm);
 
             &__status {
                 &--neutral {
@@ -299,6 +307,18 @@
                 }
                 &--error {
                     color: var(--core-color-opacity-red-900);
+                }
+            }
+
+            &-field-marker {
+                &__required {
+                    &--true {
+                        color: var(--core-color-solid-red-900);
+                    }
+
+                    &--false {
+                        color: var(--semantic-color-typography-disabled);
+                    }
                 }
             }
         }
@@ -314,12 +334,24 @@
                 font-size: var(--core-fontSize-50);
                 height: var(--core-size-600);
                 gap: var(--semantic-spacing-gap-sm);
+
+                &-field-marker {
+                    font-size: var(
+                        --semantic-typography-caption-regular-default-fontSize
+                    );
+                }
             }
             &:not(placeholder-shown) + .label {
                 transform: translateY(-100%);
                 line-height: var(--core-lineHeight-100);
                 font-size: var(--core-fontSize-50);
                 height: var(--core-size-900);
+
+                &-field-marker {
+                    font-size: var(
+                        --semantic-typography-body-md-regular-default-fontSize
+                    );
+                }
             }
         }
 
