--- a/lib/components/Badge/badge.scss
+++ b/lib/components/Badge/badge.scss
@@ -14,12 +14,41 @@
     }
     &__position {
         &-bottom {
-            top: var(--core-size-2200);
-            left: var(--core-size-2200);
+            &-sm {
+                bottom: -2PX;
+                right: -2px;
+            }
+            &-md {
+                bottom: -4px;
+                right: -4px;
+            }
+            &-lg {
+                bottom: -8px;
+                right: -8px;
+            }
         }
         &-top {
-            top: -9px;
-            left: var(--core-size-800);
+            &-sm {
+                top: -9px;
+                right: -9px;
+            }
+            &-md {
+                top: -9px;
+                right: -9px;
+            }
+            &-lg {
+                top: -12px;
+                right: -12px;
+            }
+            &-xl {
+                top: -12px;
+                right: -12px;
+            }
+            &-2xl {
+                top: -18px;
+                right: -18px;
+            }
+           
         }
         &-center {
             top: var(--core-size-800);
