fix: updated typo

--- a/lib/components/Badge/badge.scss
+++ b/lib/components/Badge/badge.scss
@@ -15,7 +15,7 @@
     &__position {
         &-bottom {
             &-sm {
-                bottom: -2PX;
+                bottom: -2px;
                 right: -2px;
             }
             &-md {
