fix: update color tokens

--- a/lib/components/Button/button.scss
+++ b/lib/components/Button/button.scss
@@ -43,8 +43,10 @@
     &__transform {
         transition-property: transform;
         transition-duration: var(--core-motion-duration-200);
-        transform: rotate(180deg);
         transition-timing-function: ease-in-out;
+        &-rotate {
+            transform: rotate(180deg);
+        }
     }
 
     &__full-width {
