--- a/lib/components/Tab/trigger/trigger.scss
+++ b/lib/components/Tab/trigger/trigger.scss
@@ -17,8 +17,12 @@
     display: inline-flex;
 
     svg {
-        fill: var(--semantic-color-typography-default);
+        fill: var(--component-tab-icon-default);
+        &[aria-selected="true"] {
+            fill: var(--component-tab-icon-selected);
+        }
     }
+
 }
 .label-class {
     text-align: center;
