--- a/lib/components/SegmentedControl/segmented-control.scss
+++ b/lib/components/SegmentedControl/segmented-control.scss
@@ -8,11 +8,7 @@
         align-items: stretch;
         width: fit-content;
         height: fit-content;
-        background: color-mix(
-            in srgb,
-            var(--semantic-color-typography-prominent) 4%,
-            transparent
-        );
+        background-color: var(--semantic-color-monochrome-surface-normal-lowest);
         -webkit-tap-highlight-color: transparent;
 
         .item {
@@ -40,20 +36,12 @@
                     var(--core-color-solid-blue-700) inset;
             }
             &:hover:not(:disabled) {
-                background: color-mix(
-                    in srgb,
-                    var(--semantic-color-typography-prominent) 8%,
-                    transparent
-                );
+                background-color: var(--component-segmentedControl-bg-single-item-hover);
             }
             &:active:not(:disabled, .selected),
             &:active:not(:disabled, .animated)::before {
                 box-shadow: unset;
-                background: color-mix(
-                    in srgb,
-                    var(--semantic-color-typography-prominent) 16%,
-                    transparent
-                );
+                background-color: var(--component-segmentedControl-bg-single-item-active);
             }
             &.selected:not(:disabled) {
                 // colors should stay the same for both themes:
