--- a/lib/components/Typography/typography.scss
+++ b/lib/components/Typography/typography.scss
@@ -1,7 +1,4 @@
-
-
-@import '@quill-bundle/typhography.scss';
-
+@import "@quill-bundle/typhography.scss";
 
 $headings: hero, h1, h2, h3, h4, h5, h6;
 $sizes: xl, lg, md, sm;
@@ -131,5 +128,9 @@ $weights: regular, bold;
 
     &__body-text {
         @include customTypeTextStyles(body, true);
+    }
+
+    &-centered {
+        text-align: center;
     }
 }
