--- a/lib/components/Button/dropdown/dropdown.scss
+++ b/lib/components/Button/dropdown/dropdown.scss
@@ -1,18 +1,9 @@
-@import '@quill/spacing.scss';
-@import '@quill/color.semantic.scss';
-@import '@quill/border.scss';
-@import '@quill/elevation.scss';
-@import '@quill/spacing.scss';
-@import '@quill/size.scss';
-@import '@quill/motion.scss';
-
-
 .dropdown-menu {
     &__box{
         padding-bottom:  var(--core-spacing-200);
     }
     &__container{
-        background-color: var(--semantic-color-background-primary-container);
+        background-color: var(--component-dropdownList-bg);
         border-radius: var(--core-borderRadius-400);
         box-shadow: var(--semantic-elevation-shadow-card-hover);
         display: flex;
@@ -21,7 +12,7 @@
         align-items: flex-start;
         max-height: 258px;
         width: fit-content;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
     &__item{
         display: flex;
@@ -29,19 +20,35 @@
         align-items: center;
         gap: var(--core-spacing-400);
         align-self: stretch;
-        min-height: var(--core-size-2400);
-        
         border-radius: var(--core-borderRadius-200);
+        color: var(--component-dropdownItem-label-color-default);
+
+        &--size {
+           &-sm {
+            min-height: var(--core-borderRadius-1600);
+           }
+           &-md {
+            min-height: var(--core-borderRadius-1600);
+           }
+           &-lg {
+            min-height: var(--core-borderRadius-2400);
+           }
+           &-xl {
+            min-height: var(--core-borderRadius-2400);
+          }
+        }
+
         &:hover{
-            background-color: var(--semantic-color-background-primary-base);
+            background-color: var(--component-dropdownItem-bg-hover);
             cursor: pointer ;
       
         }
-        &--selected{
-            background-color: var(--semantic-color-background-primary-base);
+        &--selected:not(:active):not(hover){
+            background-color: var(--component-dropdownItem-bg-selected);
+            color : var(--component-dropdownItem-label-color-selectedWhite);
         }
         &--active{
-            background-color: var(--semantic-color-background-primary-base);
+            background-color: var(--component-dropdownItem-bg-active);
         
         }
     }
